conf_kubernetes/cast-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cast-service
  name: cast-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cast-service
    spec:
      containers:
        - args:
            - uvicorn
            - app.main:app
            - --reload
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          image: ykadi/cast-service:v1
          name: cast-service
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          # volumeMounts:
          #   - mountPath: /app
          #     name: cast-service-claim0
      restartPolicy: Always
      # volumes:
      #   - name: cast-service-claim0
      #     persistentVolumeClaim:
      #       claimName: cast-service-claim0
status: {}
