conf_kubernetes/movie-db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: movie-db
  name: movie-db
  namespace: default
spec:
  replicas: 1
  serviceName: movie-db
  selector:
    matchLabels:
      app: movie-db
  template:
    metadata:
      labels:
        app: movie-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: movie_db_dev
            - name: POSTGRES_PASSWORD
              value: movie_db_password
            - name: POSTGRES_USER
              value: movie_db_username
          image: postgres:12.1-alpine
          name: movie-db
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data-movie
      restartPolicy: Always
      volumes:
        - name: postgres-data-movie
          persistentVolumeClaim:
            claimName: postgres-data-movie
