conf_kubernetes/movie-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: movie-service
  name: movie-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - args:
            - uvicorn
            - app.main:app
            - --reload
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          image: ykadi/movie-service:v1
          name: movie-service
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          # volumeMounts:
          #   - mountPath: /app
          #     name: movie-service-claim0
      restartPolicy: Always
      # volumes:
      #   - name: movie-service-claim0
      #     persistentVolumeClaim:
      #       claimName: movie-service-claim0
status: {}
