conf_kubernetes/cast-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cast-db
  name: cast-db-svc
  namespace: default
spec:
  ports:
    - name: tcp
      port: 5432
      targetPort: 5432
  selector:
    app: cast-db
