conf_kubernetes/cast_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cast-service
  name: cast-service
  namespace: default
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: cast-service
status:
  loadBalancer: {}
