conf_kubernetes/movie-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-db-svc
  labels:
    app: movie-db
spec:
  selector:
    app: movie-db
  ports:
   - name: tcp
     port: 5432
     targetPort: 5432
